--- a/VoucherPro.csproj
+++ b/VoucherPro.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>CRAPV_LEADS.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Clients\Layouts_KAYAK.cs" />
     <Compile Include="Clients\Layouts_LEADS.cs" />
     <Compile Include="Dashboard.cs" />
     <Compile Include="Dashboard.Designer.cs">
