IVP CLIENT VOUCHER

--- a/VoucherPro.csproj
+++ b/VoucherPro.csproj
@@ -78,6 +78,12 @@
       <DependentUpon>CRCV_CPIBILL.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Clients\CRCV_IVP.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CRCV_IVP.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Clients\CRCV_KAYAK.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -112,6 +118,10 @@
     <EmbeddedResource Include="Clients\CRCV_CPIBILL.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CRCV_CPIBILL.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Clients\CRCV_IVP.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>CRCV_IVP.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Clients\CRCV_KAYAK.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
